--- a/Linear Variational Method.ipynb
+++ b/Linear Variational Method.ipynb
@@ -61,7 +61,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -82,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.2493480220054468\n",
+      "0.249348022005\n",
       "0.2\n"
      ]
     }
@@ -116,29 +118,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]]\n",
-      "[[ 2.49348022e-01  2.44929360e-17 -2.00000000e-01]\n",
-      " [ 2.44929360e-17  1.97392088e-01 -2.44929360e-17]\n",
-      " [-2.00000000e-01 -2.44929360e-17  6.44132198e-01]]\n"
+      "[[ 0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.]]\n",
+      "[[  2.49348022e-01   2.44929360e-17  -2.00000000e-01  -4.89858720e-17\n",
+      "    2.00000000e-01   7.34788079e-17]\n",
+      " [  2.44929360e-17   1.97392088e-01  -2.44929360e-17  -5.99903913e-33\n",
+      "    2.44929360e-17   8.99855870e-33]\n",
+      " [ -2.00000000e-01  -2.44929360e-17   6.44132198e-01   4.89858720e-17\n",
+      "   -2.00000000e-01  -7.34788079e-17]\n",
+      " [ -4.89858720e-17  -5.99903913e-33   4.89858720e-17   7.89568352e-01\n",
+      "   -4.89858720e-17  -1.79971174e-32]\n",
+      " [  2.00000000e-01   2.44929360e-17  -2.00000000e-01  -4.89858720e-17\n",
+      "    1.43370055e+00   7.34788079e-17]\n",
+      " [  7.34788079e-17   8.99855870e-33  -7.34788079e-17  -1.79971174e-32\n",
+      "    7.34788079e-17   1.77652879e+00]]\n"
      ]
     }
    ],
    "source": [
-    "H_mat = np.zeros((3,3))\n",
+    "H_mat = np.zeros((6,6))\n",
     "print (H_mat)\n",
     "### loop over indices of the basis you are expanding in\n",
     "### and compute and store the corresponding Hamiltonian matrix elements\n",
-    "for i in range(1,4):\n",
-    "    for j in range(1,4):\n",
+    "for i in range(1,7):\n",
+    "    for j in range(1,7):\n",
     "        H_mat[i-1][j-1] = H_ij(i, j)\n",
     "\n",
     "### Print the resulting Hamiltonian matrix\n",
@@ -166,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -174,19 +188,20 @@
      "output_type": "stream",
      "text": [
       "This is the c vector\n",
-      "[1. 0. 0.]\n",
+      "[ 1.  0.  0.  0.  0.  0.]\n",
       "This is the H * c vector\n",
-      "[ 2.49348022e-01  2.44929360e-17 -2.00000000e-01]\n",
+      "[  2.49348022e-01   2.44929360e-17  -2.00000000e-01  -4.89858720e-17\n",
+      "   2.00000000e-01   7.34788079e-17]\n",
       "Thisis the c transpose\n",
-      "[1. 0. 0.]\n",
+      "[ 1.  0.  0.  0.  0.  0.]\n",
       "This is the energy functional value!\n",
-      "0.2493480220054468\n"
+      "0.249348022005\n"
      ]
     }
    ],
    "source": [
     "### create an empty numpy array for the c vector\n",
-    "c = np.zeros(3)\n",
+    "c = np.zeros(6)\n",
     "### assign c vector to be (1, 0, 0)\n",
     "c[0] = 1\n",
     "print(\"This is the c vector\")\n",
@@ -219,15 +234,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.16573541893898724\n",
-      "[-9.22618887e-01  3.85712834e-01 -6.61272129e-16]\n"
+      "1.5277522652\n",
+      "[ -1.88514391e-01  -9.34136379e-01   3.03070206e-01   1.16345328e-16\n",
+      "   6.62763018e-16   1.10085006e-16]\n"
      ]
     }
    ],
@@ -254,6 +270,38 @@
     "2.  Why do you think mixing in functions that correspond to excited states in the ordinary particle in a box system actually helped to improve (i.e. lower) your energy in the system with the delta function potential?\n",
     "3.  Increase the number of basis functions to 6 (so that ${\\bf H}$ is a 6x6 matrix and ${\\bf c}$ is a vector with 6 entries) and repeat your calculation of the variational estimate of the ground state energy.  Does the energy improve (lower) compared to what it was when 3 basis functions were used?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answers to Questions Part 2, 2/13/2020\n",
+      "1. The energy calculated above is higher than the ground state energy of the ordinary particle in a box system\n",
+      "2. Mixing in functions that correspond to excited states in the ordinary particle in a box system actually helped to improve the energy in the system with the delta function potential because it was a more accurate representation of the system with the potential. The trial energy using the linear variational method is always higher than the true energy, so using just the ground state energy would not be enough.\n",
+      "3. Increasing the number of basis functions to 6 did not change the variational estimate of the ground state energy from when 3 basis functions were used. The energy was the same.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Answers to Questions Part 2, 2/13/2020\")\n",
+    "print(\"1. The energy calculated above is higher than the ground state energy of the ordinary particle in a box system\")\n",
+    "print(\"2. Mixing in functions that correspond to excited states in the ordinary particle in a box system actually helped to improve the energy in the system with the delta function potential because it was a more accurate representation of the system with the potential. The trial energy using the linear variational method is always higher than the true energy, so using just the ground state energy would not be enough.\")\n",
+    "print(\"3. Increasing the number of basis functions to 6 did not change the variational estimate of the ground state energy from when 3 basis functions were used. The energy was the same.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -272,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
