--- a/Linear Variational Method.ipynb
+++ b/Linear Variational Method.ipynb
@@ -61,9 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -84,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.249348022005\n",
+      "0.2493480220054468\n",
       "0.2\n"
      ]
     }
@@ -118,31 +116,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.]]\n",
-      "[[  2.49348022e-01   2.44929360e-17  -2.00000000e-01  -4.89858720e-17\n",
-      "    2.00000000e-01   7.34788079e-17]\n",
-      " [  2.44929360e-17   1.97392088e-01  -2.44929360e-17  -5.99903913e-33\n",
-      "    2.44929360e-17   8.99855870e-33]\n",
-      " [ -2.00000000e-01  -2.44929360e-17   6.44132198e-01   4.89858720e-17\n",
-      "   -2.00000000e-01  -7.34788079e-17]\n",
-      " [ -4.89858720e-17  -5.99903913e-33   4.89858720e-17   7.89568352e-01\n",
-      "   -4.89858720e-17  -1.79971174e-32]\n",
-      " [  2.00000000e-01   2.44929360e-17  -2.00000000e-01  -4.89858720e-17\n",
-      "    1.43370055e+00   7.34788079e-17]\n",
-      " [  7.34788079e-17   8.99855870e-33  -7.34788079e-17  -1.79971174e-32\n",
-      "    7.34788079e-17   1.77652879e+00]]\n"
+      "[[0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]]\n",
+      "[[ 2.49348022e-01  2.44929360e-17 -2.00000000e-01 -4.89858720e-17\n",
+      "   2.00000000e-01  7.34788079e-17]\n",
+      " [ 2.44929360e-17  1.97392088e-01 -2.44929360e-17 -5.99903913e-33\n",
+      "   2.44929360e-17  8.99855870e-33]\n",
+      " [-2.00000000e-01 -2.44929360e-17  6.44132198e-01  4.89858720e-17\n",
+      "  -2.00000000e-01 -7.34788079e-17]\n",
+      " [-4.89858720e-17 -5.99903913e-33  4.89858720e-17  7.89568352e-01\n",
+      "  -4.89858720e-17 -1.79971174e-32]\n",
+      " [ 2.00000000e-01  2.44929360e-17 -2.00000000e-01 -4.89858720e-17\n",
+      "   1.43370055e+00  7.34788079e-17]\n",
+      " [ 7.34788079e-17  8.99855870e-33 -7.34788079e-17 -1.79971174e-32\n",
+      "   7.34788079e-17  1.77652879e+00]]\n"
      ]
     }
    ],
@@ -180,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -188,14 +186,14 @@
      "output_type": "stream",
      "text": [
       "This is the c vector\n",
-      "[ 1.  0.  0.  0.  0.  0.]\n",
+      "[1. 0. 0. 0. 0. 0.]\n",
       "This is the H * c vector\n",
-      "[  2.49348022e-01   2.44929360e-17  -2.00000000e-01  -4.89858720e-17\n",
-      "   2.00000000e-01   7.34788079e-17]\n",
+      "[ 2.49348022e-01  2.44929360e-17 -2.00000000e-01 -4.89858720e-17\n",
+      "  2.00000000e-01  7.34788079e-17]\n",
       "Thisis the c transpose\n",
-      "[ 1.  0.  0.  0.  0.  0.]\n",
+      "[1. 0. 0. 0. 0. 0.]\n",
       "This is the energy functional value!\n",
-      "0.249348022005\n"
+      "0.2493480220054468\n"
      ]
     }
    ],
@@ -234,16 +232,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.5277522652\n",
-      "[ -1.88514391e-01  -9.34136379e-01   3.03070206e-01   1.16345328e-16\n",
-      "   6.62763018e-16   1.10085006e-16]\n"
+      "1.52775226519596\n",
+      "[-1.88514391e-01 -9.34136379e-01  3.03070206e-01  1.16345328e-16\n",
+      "  6.62763018e-16  1.10085006e-16]\n"
      ]
     }
    ],
@@ -262,6 +260,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -273,33 +278,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Answers to Questions Part 2, 2/13/2020\n",
       "1. The energy calculated above is higher than the ground state energy of the ordinary particle in a box system\n",
       "2. Mixing in functions that correspond to excited states in the ordinary particle in a box system actually helped to improve the energy in the system with the delta function potential because it was a more accurate representation of the system with the potential. The trial energy using the linear variational method is always higher than the true energy, so using just the ground state energy would not be enough.\n",
-      "3. Increasing the number of basis functions to 6 did not change the variational estimate of the ground state energy from when 3 basis functions were used. The energy was the same.\n"
+      "3. Increasing the number of basis functions to 6 increased the variational estimate of the ground state energy from when 3 basis functions were used. The energy did not improve.\n"
      ]
     }
    ],
    "source": [
-    "print(\"Answers to Questions Part 2, 2/13/2020\")\n",
     "print(\"1. The energy calculated above is higher than the ground state energy of the ordinary particle in a box system\")\n",
     "print(\"2. Mixing in functions that correspond to excited states in the ordinary particle in a box system actually helped to improve the energy in the system with the delta function potential because it was a more accurate representation of the system with the potential. The trial energy using the linear variational method is always higher than the true energy, so using just the ground state energy would not be enough.\")\n",
-    "print(\"3. Increasing the number of basis functions to 6 did not change the variational estimate of the ground state energy from when 3 basis functions were used. The energy was the same.\")"
+    "print(\"3. Increasing the number of basis functions to 6 increased the variational estimate of the ground state energy from when 3 basis functions were used. The energy did not improve.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -320,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
