--- a/Linear Variational Method.ipynb
+++ b/Linear Variational Method.ipynb
@@ -232,14 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.52775226519596\n",
+      "[1.52775227 0.15577979 0.64364871 1.77652879 0.19739209 0.78956835]\n",
       "[-1.88514391e-01 -9.34136379e-01  3.03070206e-01  1.16345328e-16\n",
       "  6.62763018e-16  1.10085006e-16]\n"
      ]
@@ -252,7 +252,7 @@
     "\n",
     "### print lowest eigenvalues corresponding to the \n",
     "### variational estimate of the ground state energy\n",
-    "print(E_opt[0])\n",
+    "print(E_opt)\n",
     "\n",
     "### print coefficients that define the trial wavefunction with the lowest eigenvalue\n",
     "### which corresponds to the variational estimate of the ground state wavefunction\n",
@@ -294,7 +294,7 @@
    "source": [
     "print(\"1. The energy calculated above is higher than the ground state energy of the ordinary particle in a box system\")\n",
     "print(\"2. Mixing in functions that correspond to excited states in the ordinary particle in a box system actually helped to improve the energy in the system with the delta function potential because it was a more accurate representation of the system with the potential. The trial energy using the linear variational method is always higher than the true energy, so using just the ground state energy would not be enough.\")\n",
-    "print(\"3. Increasing the number of basis functions to 6 increased the variational estimate of the ground state energy from when 3 basis functions were used. The energy did not improve.\")"
+    "print(\"3. Increasing the number of basis functions to 6 decreased the variational estimate of the ground state energy from when 3 basis functions were used. The energy did improve since there were estimates that were less.\")"
    ]
   },
   {
